# ballista_python

./: .gitignore  Cargo.toml  README.md  requirements.txt
.github/: dependabot.yml
.github/workflows/: basic.yml
examples/: client.rs  client_df.rs  client_sql.rs  executor.rs  pickle_test.rs  scheduler.rs
src/: codec.rs  factory.rs  lib.rs  pickle.rs  udf.rs
tests/: e2e.rs  pickle.rs
