[package]
name = "ballista_python"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ballista = "45"
ballista-core = { version = "45", default-features = false }
ballista-executor = { version = "45", default-features = false }
ballista-scheduler = { version = "45", default-features = false }
datafusion = { version = "45", features = ["pyarrow"] }
datafusion-proto = { version = "45" }
log = "0.4"
tokio = { version = "1", features = ["full"] }

pyo3 = { version = "0.23", features = ["auto-initialize"] }
pyo3-log = "0.12"

prost = { version = "0.13.2" }
prost-types = { version = "0.13.2" }
async-trait = "0.1.88"

[dev-dependencies]
env_logger = "0.11"