[package]
name = "ballista_python"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ballista = "46"
ballista-core = { version = "46", default-features = false }
ballista-executor = { version = "46", default-features = false }
ballista-scheduler = { version = "46", default-features = false }
datafusion = { version = "46", features = ["pyarrow"] }
datafusion-proto = { version = "46" }
log = "0.4"
tokio = { version = "1", features = ["full"] }

pyo3 = { version = "0.23", features = ["auto-initialize"] }
pyo3-log = "0.12"

prost = { version = "0.14.0" }
prost-types = { version = "0.13.2" }
async-trait = "0.1.88"

[dev-dependencies]
env_logger = "0.11"